[gd_scene load_steps=18 format=3 uid="uid://cq4x7y1r5f1vn"]

[ext_resource type="Script" uid="uid://dvd2lhclre71n" path="res://entity/enemy/enemy.gd" id="1_enemy"]
[ext_resource type="PackedScene" uid="uid://bilhtfahidddi" path="res://components/HealthComponent/health_component.tscn" id="2_health"]
[ext_resource type="Script" uid="uid://dypwmlmtrk5o2" path="res://components/CombatComponents/hurtbox_component.gd" id="3_hurtbox"]
[ext_resource type="Script" uid="uid://cgj3byjljqdxk" path="res://components/CombatComponents/melee_weapon_component.gd" id="4_0p2mk"]
[ext_resource type="Script" uid="uid://bj7v6hjyshcoe" path="res://components/CombatComponents/hitbox_component.gd" id="5_hitbox"]
[ext_resource type="Script" uid="uid://b7wju1to5e3f3" path="res://components/TeamComponent/team_component.gd" id="6_gevl6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_enemy"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_enemy"]
material = SubResource("StandardMaterial3D_enemy")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hurtbox"]

[sub_resource type="Animation" id="Animation_7mx5f"]
resource_name = "Melee_atack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeWeaponComponent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -2.1235)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeWeaponComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.2, 0.2, 0.2), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gevl6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeWeaponComponent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeWeaponComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.19999999, 0.19999999, 0.19999999)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxpe2"]
_data = {
&"Melee_atack": SubResource("Animation_7mx5f"),
&"RESET": SubResource("Animation_gevl6")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_pmu85"]

[sub_resource type="BoxMesh" id="BoxMesh_506ku"]

[sub_resource type="CylinderMesh" id="CylinderMesh_0p2mk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_detection"]
radius = 20.0

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_enemy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_body")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_enemy")

[node name="health_component" parent="." instance=ExtResource("2_health")]
max_health = 50.0

[node name="HurtboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_hurtbox")
health_component = NodePath("../health_component")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape3D_hurtbox")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xxpe2")
}

[node name="MeleeWeaponComponent" type="Node3D" parent="."]
transform = Transform3D(0.19999999, 0, 0, 0, 0.19999999, 0, 0, 0, 0.19999999, 0, 0, 0)
script = ExtResource("4_0p2mk")

[node name="HitboxComponent" type="Area3D" parent="MeleeWeaponComponent"]
collision_layer = 2
collision_mask = 4
script = ExtResource("5_hitbox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeWeaponComponent/HitboxComponent"]
shape = SubResource("BoxShape3D_pmu85")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeleeWeaponComponent"]
mesh = SubResource("BoxMesh_506ku")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.031341024, -0.19990174, 0, 0.99950874, 0.0062682047, -0.0019633174, 1.1855223, -0.7111782)
mesh = SubResource("CylinderMesh_0p2mk")

[node name="VisionRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -15)
collision_mask = 3
hit_from_inside = true

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_detection")
debug_color = Color(0.9975776, 0, 0.21530601, 1)

[node name="TeamComponent" type="Node" parent="."]
script = ExtResource("6_gevl6")
team = 0
metadata/_custom_type_script = "uid://b7wju1to5e3f3"
